fixed overlapping images to make them more responsive.

--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,11 @@ body {
   text-align: center;
 }
 
+.pastProjectDesc {
+  margin: 20px;
+  font-size: 16px;
+}
+
 .pastProjects {
   text-align: center;
   padding: 50px;
@@ -61,8 +66,13 @@ body {
 }
 
 .worldClockImg,
-.weatherAppImg {
+.weatherAppImg,
+.flavourfulImg {
   max-width: 250px;
+  height: auto;
+  padding: 20px;
+  display: block;
+  margin: 0 auto;
 }
 
 .skillsTitle {
@@ -85,7 +95,7 @@ body {
   padding-right: 40px;
   padding-bottom: 20px;
   padding-top: 20px;
-  border: 1px black solid;
+  border: 1px black solid 0.7;
   margin-bottom: 20px;
   box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
     rgba(17, 17, 26, 0.1) 0px 0px 8px;
